src/pages/faq/Faq.css
@media only screen and (min-width: 1230px) {
  .faq-accordion {
    width: 68rem;
  }
}

@media only screen and (min-width: 795px) and (max-width: 1229.999px) {
  .faq-accordion {
    width: var(--chakra-sizes-xl);
  }
}

@media only screen and (max-width: 794.999px) {
  .faq-accordion {
    max-width: var(--chakra-sizes-md);
  }
}

.title {
  color: #3d6fa8;
}

.content-text {
  color: gray;
}

